Added demos for Federation, Governance, and Delta Ops

--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -3048,6 +3048,122 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 3: Managed vs External Tables (Demo)\n",
+    "\n",
+    "**Cel**: Pokazanie różnicy w zachowaniu `DROP TABLE` dla tabel zarządzanych (Managed) i zewnętrznych (External).\n",
+    "\n",
+    "- **Managed Table**: Databricks zarządza metadanymi ORAZ plikami. `DROP TABLE` usuwa wszystko.\n",
+    "- **External Table**: Databricks zarządza tylko metadanymi. `DROP TABLE` usuwa wpis w katalogu, ale pliki zostają.\n",
+    "\n",
+    "> **Tip**: Nie potrzebujesz `EXTERNAL LOCATION` do tego demo! Możesz użyć ścieżki w **Unity Catalog Volume** lub nawet DBFS, aby zasymulować \"zewnętrzną\" lokalizację.\n",
+    "\n",
+    "### 3.1 Managed Table - Pełne usunięcie\n",
+    "Tworzymy tabelę bez podawania `LOCATION`. Pliki trafią do domyślnej lokalizacji schematu (Managed Storage)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Tworzymy Managed Table\n",
+    "spark.sql(f\"DROP TABLE IF EXISTS {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
+    "\n",
+    "spark.sql(f\"\"\"\n",
+    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\n",
+    "    AS SELECT 1 as id, 'Managed Data' as info\n",
+    "\"\"\")\n",
+    "\n",
+    "# Pobieramy lokalizację plików\n",
+    "managed_path = spark.sql(f\"DESCRIBE DETAIL {CATALOG}.{BRONZE_SCHEMA}.demo_managed\").select(\"location\").first()[0]\n",
+    "print(f\"Managed Table Path: {managed_path}\")\n",
+    "\n",
+    "# Sprawdzamy czy pliki istnieją\n",
+    "print(f\"Files exist before DROP: {len(dbutils.fs.ls(managed_path)) > 0}\")\n",
+    "\n",
+    "# Usuwamy tabelę\n",
+    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
+    "\n",
+    "# Sprawdzamy czy pliki nadal istnieją (powinno rzucić błąd lub zwrócić False)\n",
+    "try:\n",
+    "    dbutils.fs.ls(managed_path)\n",
+    "    print(\"Files exist after DROP: TRUE (Unexpected!)\")\n",
+    "except:\n",
+    "    print(\"Files exist after DROP: FALSE (Expected - Managed Table removed files)\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "external_path = f\"{DATASET_BASE_PATH}/{raw_user}/demo_external_table\"\n",
+    "dbutils.fs.rm(external_path, True) # Reset environment\n",
+    "\n",
+    "# 1. Create External Table\n",
+    "spark.sql(f\"\"\"\n",
+    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\n",
+    "    LOCATION '{external_path}'\n",
+    "    AS SELECT 1 as id, 'External Data' as info\n",
+    "\"\"\")\n",
+    "\n",
+    "# 2. Drop Table (Metadata only)\n",
+    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\")\n",
+    "\n",
+    "# 3. Verify Files Persist\n",
+    "files_exist = len(dbutils.fs.ls(external_path)) > 0\n",
+    "print(f\"External Path: {external_path}\")\n",
+    "print(f\"Files persist after DROP: {'✅ YES' if files_exist else '❌ NO'}\")\n",
+    "\n",
+    "# Cleanup (Optional)\n",
+    "# dbutils.fs.rm(external_path, True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9abaf3af-9908-419b-b1b5-c3600a0877b1",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "## Best Practices\n",
+    "\n",
+    "### Wydajność:\n",
+    "- Używaj ZORDER BY dla kolumn często występujących w WHERE clauses\n",
+    "- Regularnie uruchamiaj OPTIMIZE dla kompaktowania small files\n",
+    "- Partitioning tylko dla bardzo dużych tabel (TB+) ze skewed data\n",
+    "\n",
+    "### Jakość kodu:\n",
+    "- Zawsze używaj explicit schema zamiast inferSchema w production\n",
+    "- Implementuj schema evolution strategy dla backward compatibility\n",
+    "- Używaj MERGE INTO zamiast separate DELETE + INSERT operations\n",
+    "\n",
+    "### Data Quality:\n",
+    "- Włącz Change Data Feed dla audit trails i compliance\n",
+    "- Regularne backup przez Time Travel snapshots\n",
+    "- Implement data validation rules w Delta constraints\n",
+    "\n",
+    "### Governance:\n",
+    "- Ustaw odpowiednie retention periods dla compliance requirements\n",
+    "- Używaj Unity Catalog permissions dla row/column level security\n",
+    "- Dokumentuj schema changes i business logic w table comments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -3093,45 +3209,6 @@
     "- Sprawdź `DESCRIBE DETAIL` dla metadanych o plikach\n",
     "- Weryfikuj table properties przez `SHOW TBLPROPERTIES`\n",
     "- Monitoruj `_delta_log/` folder dla troubleshooting"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9abaf3af-9908-419b-b1b5-c3600a0877b1",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Best Practices\n",
-    "\n",
-    "### Wydajność:\n",
-    "- Używaj ZORDER BY dla kolumn często występujących w WHERE clauses\n",
-    "- Regularnie uruchamiaj OPTIMIZE dla kompaktowania small files\n",
-    "- Partitioning tylko dla bardzo dużych tabel (TB+) ze skewed data\n",
-    "\n",
-    "### Jakość kodu:\n",
-    "- Zawsze używaj explicit schema zamiast inferSchema w production\n",
-    "- Implementuj schema evolution strategy dla backward compatibility\n",
-    "- Używaj MERGE INTO zamiast separate DELETE + INSERT operations\n",
-    "\n",
-    "### Data Quality:\n",
-    "- Włącz Change Data Feed dla audit trails i compliance\n",
-    "- Regularne backup przez Time Travel snapshots\n",
-    "- Implement data validation rules w Delta constraints\n",
-    "\n",
-    "### Governance:\n",
-    "- Ustaw odpowiednie retention periods dla compliance requirements\n",
-    "- Używaj Unity Catalog permissions dla row/column level security\n",
-    "- Dokumentuj schema changes i business logic w table comments"
    ]
   },
   {
@@ -3229,6 +3306,14 @@
     "# spark.catalog.clearCache()\n",
     "\n",
     "# display(spark.createDataFrame([(\"Zasoby zostały wyczyszczone\", \"✓\")], [\"status\", \"result\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3.2 External Table (Unmanaged) - Zachowanie plików\n",
+    "Tworzymy tabelę podając `LOCATION`. Użyjemy ścieżki w Volume (lub tymczasowej), aby symulować zewnętrzny storage."
    ]
   }
  ],
