--- a/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
@@ -1305,6 +1305,76 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2.3 External Locations & External Tables\n",
+    "\n",
+    "**External Location** to obiekt w Unity Catalog, który łączy **Storage Credential** (poświadczenia chmurowe) z konkretną ścieżką w cloud storage (S3/ADLS/GCS).\n",
+    "\n",
+    "Pozwala to na:\n",
+    "1.  Bezpieczny dostęp do danych w chmurze bez podawania kluczy w kodzie.\n",
+    "2.  Tworzenie **External Tables** (dane leżą poza zarządzanym storage Databricks).\n",
+    "3.  Tworzenie **External Volumes**.\n",
+    "\n",
+    "**Wymagania:**\n",
+    "- Uprawnienie `CREATE EXTERNAL LOCATION` na Metastore.\n",
+    "- Skonfigurowany Storage Credential.\n",
+    "\n",
+    "> **Uwaga**: W środowisku szkoleniowym możesz nie mieć uprawnień do tworzenia Storage Credential. Poniższy kod jest przykładem referencyjnym."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Tworzenie Storage Credential (wymaga admina)\n",
+    "# spark.sql(\"\"\"\n",
+    "#     CREATE STORAGE CREDENTIAL IF NOT EXISTS `azure_managed_identity`\n",
+    "#     USING MANAGED IDENTITY 'resource-id-of-managed-identity'\n",
+    "#     COMMENT 'Dostęp do Data Lake'\n",
+    "# \"\"\")\n",
+    "\n",
+    "# 2. Tworzenie External Location\n",
+    "# spark.sql(\"\"\"\n",
+    "#     CREATE EXTERNAL LOCATION IF NOT EXISTS `kion_raw_data`\n",
+    "#     URL 'abfss://raw@kiondatalake.dfs.core.windows.net/'\n",
+    "#     WITH STORAGE CREDENTIAL `azure_managed_identity`\n",
+    "#     COMMENT 'Lokalizacja surowych danych'\n",
+    "# \"\"\")\n",
+    "\n",
+    "# 3. Nadanie uprawnień użytkownikom\n",
+    "# spark.sql(\"GRANT READ FILES, WRITE FILES ON EXTERNAL LOCATION `kion_raw_data` TO `data-engineers`\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Tworzenie External Table (korzystając z External Location)\n",
+    "# Tabela nie jest zarządzana przez Databricks (DROP TABLE nie usuwa plików)\n",
+    "\n",
+    "# spark.sql(f\"\"\"\n",
+    "#     CREATE TABLE IF NOT EXISTS {CATALOG}.{BRONZE_SCHEMA}.legacy_logs (\n",
+    "#         log_id STRING,\n",
+    "#         timestamp TIMESTAMP,\n",
+    "#         message STRING\n",
+    "#     )\n",
+    "#     LOCATION 'abfss://raw@kiondatalake.dfs.core.windows.net/logs/legacy'\n",
+    "# \"\"\")\n",
+    "\n",
+    "display(spark.createDataFrame([\n",
+    "    (\"External Location\", \"Abstrakcja nad Cloud Storage\"),\n",
+    "    (\"Storage Credential\", \"Bezpieczne przechowywanie kluczy/tożsamości\"),\n",
+    "    (\"External Table\", \"Metadane w UC, dane w Twoim storage\")\n",
+    "], [\"Komponent\", \"Opis\"]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
