Refactor notebooks: Governance structure, AI/ML model serving, and Delta Lake operations

--- a/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/04_unity_catalog_governance.ipynb
@@ -230,282 +230,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "9a348512-849b-4f54-9dea-1262baef56f2",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## 2.1 Przygotowanie Danych z Dataset\n",
-    "\n",
-    "Zanim przejdziemy do zarządzania dostępami, wczytamy rzeczywiste dane z katalogu dataset/, które będziemy używać w przykładach Unity Catalog."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "7617ea59-d3f4-4d85-8fd6-54b896249181",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "customers_df = spark.read \\\n",
-    "    .option(\"header\", \"true\") \\\n",
-    "    .option(\"inferSchema\", \"true\") \\\n",
-    "    .csv(CUSTOMERS_CSV)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e47242e7-0ebf-4979-99ce-fd8f1b0a3af7",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "customers_df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "cc179afe-133f-45a0-92d6-ffe781455612",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "**Dane customers wczytane**\n",
-    "\n",
-    "Wczytano dane klientów z pliku CSV. Schema został automatycznie wykryty przez `inferSchema=true`."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "9a81fc6f-6d14-4067-bb78-1fa25aedcb20",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "display(customers_df.limit(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "db9b9186-17b5-4b09-8808-6a8da65681fa",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders_df = spark.read.json(ORDERS_JSON)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "db425c4c-5caf-49e2-acd0-469d754aca27",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "orders_df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e4a388ea-44ab-4e18-b838-f8c3741f248f",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "**Dane orders wczytane**\n",
-    "\n",
-    "Wczytano dane zamówień z pliku JSON. Spark automatycznie wykrył schema dla nested JSON structures."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "07fb5df9-2166-40bd-af5e-0d415e91dd58",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "display(orders_df.limit(5))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "5c68f1f0-319a-48fe-ad40-79d72e013112",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "products_df = spark.read.parquet(PRODUCTS_PARQUET)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "353d34cb-052e-4161-afc6-6ce62307bd52",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "products_df.printSchema()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "e3929aeb-2bfe-4f87-a961-de4e82933fa0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "**Dane products wczytane**\n",
-    "\n",
-    "Wczytano dane produktów z pliku Parquet. Parquet zawiera optimized binary format with schema embedded in the file."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 0,
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
-     "nuid": "d1994acc-ff8c-4d6f-8064-3ea61c8e1a9a",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "outputs": [],
-   "source": [
-    "display(products_df.limit(5))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "a5ab4cb6-fa52-4253-8010-182d32ec5334",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -513,7 +237,7 @@
     }
    },
    "source": [
-    "## 1⃣ Unity Catalog Architecture\n",
+    "## 1. Unity Catalog Architecture\n",
     "\n",
     "**Unity Catalog** to zunifikowane rozwiązanie governance dla Databricks Lakehouse.\n",
     "\n",
@@ -571,9 +295,32 @@
     }
    },
    "source": [
-    "## Setup i Basic Operations\n",
-    "\n",
-    "### Creating Catalogs and Schemas, ON External:"
+    "## 1.1 Setup i Basic Operations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Creating User Groups\n",
+    "Tworzymy grupy użytkowników dla demonstracji uprawnień:\n",
+    "- `data_engineers`: Pełny dostęp do schematów Bronze/Silver\n",
+    "- `data_analysts`: Dostęp tylko do odczytu Gold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create groups (if not exists)\n",
+    "try:\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS data_engineers\")\n",
+    "    spark.sql(\"CREATE GROUP IF NOT EXISTS data_analysts\")\n",
+    "    print(\"Groups created successfully\")\n",
+    "except Exception as e:\n",
+    "    print(f\"Could not create groups (might require admin privileges): {e}\")"
    ]
   },
   {
@@ -839,6 +586,126 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Data Preparation\n",
+    "\n",
+    "Zanim przejdziemy do zarządzania dostępami, wczytamy rzeczywiste dane z katalogu dataset/, które będziemy używać w przykładach Unity Catalog."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers_df = spark.read \\\n",
+    "    .option(\"header\", \"true\") \\\n",
+    "    .option(\"inferSchema\", \"true\") \\\n",
+    "    .csv(CUSTOMERS_CSV)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "customers_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dane customers wczytane**\n",
+    "\n",
+    "Wczytano dane klientów z pliku CSV. Schema został automatycznie wykryty przez inferSchema=true."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(customers_df.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df = spark.read.json(ORDERS_JSON)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "orders_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dane orders wczytane**\n",
+    "\n",
+    "Wczytano dane zamówień z pliku JSON. Spark automatycznie wykrył schema dla nested JSON structures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(orders_df.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products_df = spark.read.parquet(PRODUCTS_PARQUET)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "products_df.printSchema()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Dane products wczytane**\n",
+    "\n",
+    "Wczytano dane produktów z pliku Parquet. Parquet zawiera optimized binary format with schema embedded in the file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(products_df.limit(5))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -853,7 +720,7 @@
     }
    },
    "source": [
-    "### Creating Tables in Unity Catalog:"
+    "## 3. Creating Tables in Unity Catalog"
    ]
   },
   {
