--- a/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
+++ b/DZIEN_3_Transformation_Governance_Integrations/06_ai_ml_genai_integrations.ipynb
@@ -313,6 +313,15 @@
    "outputs": [],
    "source": [
     "# 3. Trening i logowanie\n",
+    "import mlflow\n",
+    "from mlflow.models.signature import infer_signature\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.metrics import mean_squared_error\n",
+    "\n",
+    "# Upewnij się, że zmienne środowiskowe są dostępne\n",
+    "if 'CATALOG' not in locals() or 'GOLD_SCHEMA' not in locals():\n",
+    "    raise ValueError(\"Zmienne CATALOG i GOLD_SCHEMA nie są zdefiniowane. Uruchom komórki Setup.\")\n",
+    "\n",
     "with mlflow.start_run(run_name=\"RandomForest_v1\") as run:\n",
     "    # Parametry\n",
     "    n_estimators = 50\n",
@@ -323,20 +332,72 @@
     "    model.fit(X_train, y_train)\n",
     "    \n",
     "    # Metryki\n",
-    "    mse = mean_squared_error(y_test, model.predict(X_test))\n",
+    "    predictions = model.predict(X_test)\n",
+    "    mse = mean_squared_error(y_test, predictions)\n",
     "    mlflow.log_metric(\"mse\", mse)\n",
     "    \n",
-    "    # Logowanie modelu\n",
-    "    mlflow.sklearn.log_model(model, \"model\")\n",
+    "    # Sygnatura (Wymagana do Model Serving!)\n",
+    "    # Definiuje schemat wejścia i wyjścia dla endpointu REST API\n",
+    "    signature = infer_signature(X_train, model.predict(X_train))\n",
+    "    \n",
+    "    # Logowanie i Rejestracja modelu w Unity Catalog\n",
+    "    # Zapisujemy model pod nazwą: katalog.schemat.nazwa_modelu\n",
+    "    model_name = f\"{CATALOG}.{GOLD_SCHEMA}.kion_sales_forecast\"\n",
+    "    \n",
+    "    print(f\"Rejestrowanie modelu w Unity Catalog: {model_name}...\")\n",
+    "    \n",
+    "    mlflow.sklearn.log_model(\n",
+    "        model, \n",
+    "        \"model\",\n",
+    "        signature=signature,\n",
+    "        registered_model_name=model_name,\n",
+    "        input_example=X_train.iloc[:5]\n",
+    "    )\n",
     "    \n",
     "    run_id = run.info.run_id\n",
     "\n",
     "display(spark.createDataFrame([\n",
     "    (\"Run ID\", run_id),\n",
     "    (\"MSE\", f\"{mse:.2f}\"),\n",
-    "    (\"Model\", \"RandomForestRegressor\"),\n",
-    "    (\"n_estimators\", str(n_estimators))\n",
+    "    (\"Model Name\", model_name),\n",
+    "    (\"Signature\", \"Added & Registered\"),\n",
+    "    (\"Next Step\", \"Go to 'Serving' -> 'Create Endpoint'\")\n",
     "], [\"Parametr\", \"Wartość\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Opcjonalnie: Programowe tworzenie Model Serving Endpoint\n",
+    "# Aby uruchomić ten model jako REST API, możemy użyć Databricks SDK lub UI (Serving -> Create Endpoint)\n",
+    "\n",
+    "\"\"\"\n",
+    "# Przykładowy kod do tworzenia endpointu (wymaga: pip install databricks-sdk)\n",
+    "from databricks.sdk import WorkspaceClient\n",
+    "from databricks.sdk.service.serving import EndpointCoreConfigInput, ServedEntityInput\n",
+    "\n",
+    "w = WorkspaceClient()\n",
+    "\n",
+    "endpoint_name = \"kion-sales-forecast-endpoint\"\n",
+    "\n",
+    "w.serving_endpoints.create(\n",
+    "    name=endpoint_name,\n",
+    "    config=EndpointCoreConfigInput(\n",
+    "        served_entities=[\n",
+    "            ServedEntityInput(\n",
+    "                entity_name=f\"{CATALOG}.{GOLD_SCHEMA}.kion_sales_forecast\",\n",
+    "                entity_version=\"1\",  # Wersja modelu z Unity Catalog\n",
+    "                workload_size=\"Small\",\n",
+    "                scale_to_zero_enabled=True\n",
+    "            )\n",
+    "        ]\n",
+    "    )\n",
+    ")\n",
+    "\"\"\"\n",
+    "print(\"Model zarejestrowany. Możesz teraz przejść do zakładki 'Serving' i utworzyć endpoint wybierając model:\", model_name)"
    ]
   },
   {
