--- a/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
+++ b/DZIEN_2_Lakehouse_Delta_Lake/01_delta_lake_operations.ipynb
@@ -597,6 +597,88 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sekcja 1.5: Managed vs External Tables (Demo)\n",
+    "\n",
+    "**Cel**: Pokazanie różnicy w zachowaniu `DROP TABLE` dla tabel zarządzanych (Managed) i zewnętrznych (External).\n",
+    "\n",
+    "- **Managed Table**: Databricks zarządza metadanymi ORAZ plikami. `DROP TABLE` usuwa wszystko.\n",
+    "- **External Table**: Databricks zarządza tylko metadanymi. `DROP TABLE` usuwa wpis w katalogu, ale pliki zostają.\n",
+    "\n",
+    "> **Tip**: Nie potrzebujesz `EXTERNAL LOCATION` do tego demo! Możesz użyć ścieżki w **Unity Catalog Volume** lub nawet DBFS, aby zasymulować \"zewnętrzną\" lokalizację.\n",
+    "\n",
+    "### 1.5.1 Managed Table - Pełne usunięcie\n",
+    "Tworzymy tabelę bez podawania `LOCATION`. Pliki trafią do domyślnej lokalizacji schematu (Managed Storage)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Tworzymy Managed Table\n",
+    "spark.sql(f\"DROP TABLE IF EXISTS {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
+    "\n",
+    "spark.sql(f\"\"\"\n",
+    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\n",
+    "    AS SELECT 1 as id, 'Managed Data' as info\n",
+    "\"\"\")\n",
+    "\n",
+    "# Pobieramy lokalizację plików\n",
+    "managed_path = spark.sql(f\"DESCRIBE DETAIL {CATALOG}.{BRONZE_SCHEMA}.demo_managed\").select(\"location\").first()[0]\n",
+    "print(f\"Managed Table Path: {managed_path}\")\n",
+    "\n",
+    "# Sprawdzamy czy pliki istnieją\n",
+    "print(f\"Files exist before DROP: {len(dbutils.fs.ls(managed_path)) > 0}\")\n",
+    "\n",
+    "# Usuwamy tabelę\n",
+    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
+    "\n",
+    "# Sprawdzamy czy pliki nadal istnieją (powinno rzucić błąd lub zwrócić False)\n",
+    "try:\n",
+    "    dbutils.fs.ls(managed_path)\n",
+    "    print(\"Files exist after DROP: TRUE (Unexpected!)\")\n",
+    "except:\n",
+    "    print(\"Files exist after DROP: FALSE (Expected - Managed Table removed files)\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1.5.2 External Table (Unmanaged) - Zachowanie plików\n",
+    "Tworzymy tabelę podając `LOCATION`. Użyjemy ścieżki w Volume (lub tymczasowej), aby symulować zewnętrzny storage."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "external_path = f\"{DATASET_BASE_PATH}/{raw_user}/demo_external_table\"\n",
+    "dbutils.fs.rm(external_path, True) # Reset environment\n",
+    "\n",
+    "# 1. Create External Table\n",
+    "spark.sql(f\"\"\"\n",
+    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\n",
+    "    LOCATION '{external_path}'\n",
+    "    AS SELECT 1 as id, 'External Data' as info\n",
+    "\"\"\")\n",
+    "\n",
+    "# 2. Drop Table (Metadata only)\n",
+    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\")\n",
+    "\n",
+    "# 3. Verify Files Persist\n",
+    "files_exist = len(dbutils.fs.ls(external_path)) > 0\n",
+    "print(f\"External Path: {external_path}\")\n",
+    "print(f\"Files persist after DROP: {'✅ YES' if files_exist else '❌ NO'}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
@@ -2976,36 +3058,6 @@
       "rowLimit": 10000
      },
      "inputWidgets": {},
-     "nuid": "a666f44b-a6a5-4638-b9e1-58ece1a432d0",
-     "showTitle": false,
-     "tableResultSettingsMap": {},
-     "title": ""
-    }
-   },
-   "source": [
-    "## Walidacja i weryfikacja\n",
-    "\n",
-    "### Checklist - Co powinieneś uzyskać:\n",
-    "- [ ] Tabela Delta utworzona z automatycznym schema enforcement\n",
-    "- [ ] Schema evolution - dodana kolumna customer_tier\n",
-    "- [ ] Time Travel queries działają dla poprzednich wersji\n",
-    "- [ ] CRUD operations (INSERT, UPDATE, DELETE) wykonane poprawnie\n",
-    "- [ ] MERGE INTO zaimplementowane z upsert logic\n",
-    "- [ ] Optymalizacja OPTIMIZE i ZORDER zastosowana\n",
-    "- [ ] Change Data Feed włączony i rejestruje zmiany\n",
-    "\n",
-    "### Komendy weryfikacyjne:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {
-      "byteLimit": 2048000,
-      "rowLimit": 10000
-     },
-     "inputWidgets": {},
      "nuid": "f7cabe0a-017c-48e4-9c6d-3bed9928c6fb",
      "showTitle": false,
      "tableResultSettingsMap": {},
@@ -3048,79 +3100,32 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a666f44b-a6a5-4638-b9e1-58ece1a432d0",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
    "source": [
-    "## Sekcja 3: Managed vs External Tables (Demo)\n",
+    "## Walidacja i weryfikacja\n",
     "\n",
-    "**Cel**: Pokazanie różnicy w zachowaniu `DROP TABLE` dla tabel zarządzanych (Managed) i zewnętrznych (External).\n",
+    "### Checklist - Co powinieneś uzyskać:\n",
+    "- [ ] Tabela Delta utworzona z automatycznym schema enforcement\n",
+    "- [ ] Schema evolution - dodana kolumna customer_tier\n",
+    "- [ ] Time Travel queries działają dla poprzednich wersji\n",
+    "- [ ] CRUD operations (INSERT, UPDATE, DELETE) wykonane poprawnie\n",
+    "- [ ] MERGE INTO zaimplementowane z upsert logic\n",
+    "- [ ] Optymalizacja OPTIMIZE i ZORDER zastosowana\n",
+    "- [ ] Change Data Feed włączony i rejestruje zmiany\n",
     "\n",
-    "- **Managed Table**: Databricks zarządza metadanymi ORAZ plikami. `DROP TABLE` usuwa wszystko.\n",
-    "- **External Table**: Databricks zarządza tylko metadanymi. `DROP TABLE` usuwa wpis w katalogu, ale pliki zostają.\n",
-    "\n",
-    "> **Tip**: Nie potrzebujesz `EXTERNAL LOCATION` do tego demo! Możesz użyć ścieżki w **Unity Catalog Volume** lub nawet DBFS, aby zasymulować \"zewnętrzną\" lokalizację.\n",
-    "\n",
-    "### 3.1 Managed Table - Pełne usunięcie\n",
-    "Tworzymy tabelę bez podawania `LOCATION`. Pliki trafią do domyślnej lokalizacji schematu (Managed Storage)."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 1. Tworzymy Managed Table\n",
-    "spark.sql(f\"DROP TABLE IF EXISTS {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
-    "\n",
-    "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\n",
-    "    AS SELECT 1 as id, 'Managed Data' as info\n",
-    "\"\"\")\n",
-    "\n",
-    "# Pobieramy lokalizację plików\n",
-    "managed_path = spark.sql(f\"DESCRIBE DETAIL {CATALOG}.{BRONZE_SCHEMA}.demo_managed\").select(\"location\").first()[0]\n",
-    "print(f\"Managed Table Path: {managed_path}\")\n",
-    "\n",
-    "# Sprawdzamy czy pliki istnieją\n",
-    "print(f\"Files exist before DROP: {len(dbutils.fs.ls(managed_path)) > 0}\")\n",
-    "\n",
-    "# Usuwamy tabelę\n",
-    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_managed\")\n",
-    "\n",
-    "# Sprawdzamy czy pliki nadal istnieją (powinno rzucić błąd lub zwrócić False)\n",
-    "try:\n",
-    "    dbutils.fs.ls(managed_path)\n",
-    "    print(\"Files exist after DROP: TRUE (Unexpected!)\")\n",
-    "except:\n",
-    "    print(\"Files exist after DROP: FALSE (Expected - Managed Table removed files)\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "external_path = f\"{DATASET_BASE_PATH}/{raw_user}/demo_external_table\"\n",
-    "dbutils.fs.rm(external_path, True) # Reset environment\n",
-    "\n",
-    "# 1. Create External Table\n",
-    "spark.sql(f\"\"\"\n",
-    "    CREATE TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\n",
-    "    LOCATION '{external_path}'\n",
-    "    AS SELECT 1 as id, 'External Data' as info\n",
-    "\"\"\")\n",
-    "\n",
-    "# 2. Drop Table (Metadata only)\n",
-    "spark.sql(f\"DROP TABLE {CATALOG}.{BRONZE_SCHEMA}.demo_external\")\n",
-    "\n",
-    "# 3. Verify Files Persist\n",
-    "files_exist = len(dbutils.fs.ls(external_path)) > 0\n",
-    "print(f\"External Path: {external_path}\")\n",
-    "print(f\"Files persist after DROP: {'✅ YES' if files_exist else '❌ NO'}\")\n",
-    "\n",
-    "# Cleanup (Optional)\n",
-    "# dbutils.fs.rm(external_path, True)"
+    "### Komendy weryfikacyjne:"
    ]
   },
   {
@@ -3306,14 +3311,6 @@
     "# spark.catalog.clearCache()\n",
     "\n",
     "# display(spark.createDataFrame([(\"Zasoby zostały wyczyszczone\", \"✓\")], [\"status\", \"result\"]))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 3.2 External Table (Unmanaged) - Zachowanie plików\n",
-    "Tworzymy tabelę podając `LOCATION`. Użyjemy ścieżki w Volume (lub tymczasowej), aby symulować zewnętrzny storage."
    ]
   }
  ],
